[metadata]
name = saleae_logic_smart_battery_system_analyzer
version = 0.0.2
description = A High-Level Analyzer (HLA) Extension for Smart Battery Data Specification.
long_description = file: README.md, LICENSE
license = MIT License
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
url = https://github.com/renemoll/saleae_logic_smart_battery_system_analyzer
project_urls =
    Bug Tracker = https://github.com/renemoll/saleae_logic_smart_battery_system_analyzer/issues

[options]
zip_safe = False
include_package_data = True
package_dir=
    =.
packages = find:
python_requires = >=3.8
install_requires =

[options.package_data]
* = *.txt, *.md

[options.extras_require]
testing =
  tox
develop =
  flake8
  flake8-annotations
  flake8-bandit
  flake8-black
  flake8-bugbear
  flake8-docstrings
  flake8-import-order
  darglint
  pylint

[options.packages.find]
where=.

[flake8]
max-line-length = 88
max-complexity = 10
select = ANN,B,B950,BLK,C,D,DAR,E,F,I,S,W
extend-ignore = B404, D203, E203, E501, S404, S603, W503
exclude = .env, .git, .tox
per-file-ignores =
    **/__init__.py:F401
# flake8-docstrings
docstring-convention = google
# flake8-import-order
import-order-style = google
application-import-names = sbs_decoder,smart_battery_system

[darglint]
docstring_style = google
strictness=short
